# NULLXES-PHANTOM

./: .gitignore  PHANTOM_ARCHITECTURE.md  README.md  pyproject.toml
configs/: README.md
configs/data/: first_run_smoke.json  first_run_text_code.json  phase2_fineweb_dual.json
configs/model/: bootstrap_small.json  phantom_500b.json  phantom_smoke.json
configs/serve/: runtime.json
configs/tokenizer/: phantom_bbpe_160k.json
configs/train/: bootstrap_300_steps.json  bootstrap_smoke.json
docs/: BOOTSTRAP_TRAINING.md  DATASET_PLAN.md  DEPLOYMENT_BOOTSTRAP.md  FIRST_RUN_DATASET.md  HF_MODEL_CARD_NULLXES_PHANTOM_500B_MOE.md  PHASE2_DATASET.md  PROJECT_STRUCTURE.md
infra/: README.md
infra/serving/: docker-compose.yml
manifests/: README.md
manifests/corpora/bootstrap/: sample_corpus.txt
manifests/sources/: bootstrap_text_sources.json  first_run_text_code_sources.json
scripts/: README.md
scripts/data/: bootstrap_first_run.py
scripts/serve/: bootstrap_runtime.py
scripts/tokenizer/: train.py  train_bbpe.py
scripts/train/: run_bootstrap.py
src/phantom/: README.md  __init__.py  scale_notes.py
src/phantom/data/: __init__.py  bootstrap.py  cli.py  config.py  dataset.py
src/phantom/model/: __init__.py  attention.py  block.py  causal_lm.py  config.py  norm.py  rotary.py
src/phantom/moe/: __init__.py  experts.py  layer.py  router.py
src/phantom/serve/: __init__.py  bootstrap.py
src/phantom/tokenizer/: __init__.py  cli.py  config.py  runtime.py  trainer.py
tests/: README.md  test_model_shapes.py  test_moe_backward.py  test_tokenizer_bbpe.py
(+5 files in other folders)
