[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom"
version = "0.1.0"
description = "Bootstrap tooling for the NULLXES PHANTOM model program."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "NULLXES LC", email = "ceo@nullxes.com" }
]
dependencies = [
  "datasets>=2.20.0",
  "torch>=2.2.0",
]

[project.scripts]
phantom-tokenizer-train = "phantom.tokenizer.cli:main"
phantom-train = "phantom.train.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
